--- a/.github/workflows/auto-reading.yml
+++ b/.github/workflows/auto-reading.yml
@@ -2,9 +2,9 @@ name: Auto Reading Bot
 
 on:
   # 定时触发 - 每天早上8点和晚上8点执行
-  # schedule:
+  schedule:
   #   - cron: '0 0 * * *'    # UTC 00:00 = 北京时间 08:00
-  #   - cron: '0 12 * * *'   # UTC 12:00 = 北京时间 20:00
+     - cron: '0 12 * * *'   # UTC 12:00 = 北京时间 20:00
   
   # 拉取请求触发，用于测试阅读
   pull_request:
@@ -20,7 +20,7 @@ on:
       target_duration:
         description: '阅读时长（分钟，格式：10-20。建议：频繁运行时设置5-10分钟，GitHub免费版每月2000分钟额度）'
         required: false
-        default: '1-2'
+        default: '30-60'
         type: string
       reading_mode:
         description: '阅读模式'
@@ -76,7 +76,7 @@ jobs:
             book_switch_cooldown: 3600
 
         human_simulation:
-          enabled: false
+          enabled: true
           reading_speed_variation: true
           break_probability: 0.15
           break_duration: "10-20"
